--- a/index.html
+++ b/index.html
@@ -14,47 +14,37 @@
 </head>
 <body>
     <section class="front-page">
-        <nav class="navbar navbar-expand-lg" style="margin-top: 50px;margin-bottom: 50px;">
-            <div class="container-lg d-flex flex-column align-items-center justify-content-center gap-2">
-                <p class="navbar-brand" style="line-height: 0;">Night Rider</p>
-                <a class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-label="Toggle navigation" style="border: none;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-label="Toggle navigation"><path d="M11.646 15.146 5.854 9.354a.5.5 0 0 1 .353-.854h11.586a.5.5 0 0 1 .353.854l-5.793 5.792a.5.5 0 0 1-.707 0Z"></path></svg>
-                </a>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav d-flex align-items-center">
-                        <li class="nav-item">
-                            <a class="nav-link" style="font-weight: 500;">HOME</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT US</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">PARTS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">PAINTS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">RESTORATION</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">MAINTENANCE</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CUSTOMER SERVICE</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="hero-section container-lg d-flex flex-column align-items-center justify-content-center">
-            <h2 class="Tagline">PRECISION CRAFT. TIMELESS STYLE. REAL PERFORMANCE.</h2>
-            <p>At Night Rider, we bring your machine back to life—whether it's restoring vintage classics, customizing your ride with premium paints and parts, or keeping your bike in peak condition.</p>
-            <div class="hero-buttons d-flex gap-4">
-                <a href="#" class="d-flex align-items-center gap-2">Tutorials</i></a>
-                <a href="#" class="d-flex align-items-center gap-2">Promos</a>
-            </div>
+      <nav class="navbar navbar-dark navbar-expand-lg px-5 py-3">
+        <a class="navbar-brand fw-bold" href="#">Night Rider</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="#" style="margin-right: 40px;">About Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"style="margin-right: 40px;">Parts</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" style="margin-right: 40px;">Customer Service</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#"style="margin-right: 40px;">Services</a>
+              <ul class="dropdown-menu px-2">
+                <li><a class="nav-link" href="#">Parts</a></li>
+                <li><a class="nav-link" href="#">Paints</a></li>
+                <li><a class="nav-link" href="#">Restoration</a></li>
+                <li><a class="nav-link" href="#">Maintenance</a></li>
+                <li><a class="nav-link" href="#">More Service</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
+      </nav>
+      <div class="hero-section container-lg d-flex flex-column align-items-center justify-content-center">
+        <h2 class="Tagline">Ride. Restore. Rule the Road.</h2>
+        <p>At Night Rider, we bring your machine back to life—whether it's restoring vintage classics, customizing your ride with premium paints and parts, or keeping your bike in peak condition.</p>
+        <div class="hero-buttons d-flex gap-4">
+            <a href="#" class="d-flex align-items-center gap-2">Tutorials</i></a>
+            <a href="#" class="d-flex align-items-center gap-2">Promos</a>
+        </div>
+      </div>
     </section>
     <video src="elements/4488717-uhd_4096_2160_25fps.mp4" muted loop autoplay></video>
 </body>
