--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#" style="margin-right: 40px;">About Us</a></li>
-            <li class="nav-item"><a class="nav-link" href="#"style="margin-right: 40px;">Parts</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" style="margin-right: 40px;font-weight:600;">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"style="margin-right: 40px;">About Us</a></li>
             <li class="nav-item"><a class="nav-link" href="#" style="margin-right: 40px;">Customer Service</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#"style="margin-right: 40px;">Services</a>
